[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "numpy>=2.1.3",
    "pytest>=8.3.4",
]

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.8.2",
]

[tool.pytest.ini_options]
python_files="**/tests.py"

[tool.ruff]
target-version = "py310"
line-length = 120
show-fixes = true

[tool.ruff.lint]
extend-select = ["I", "UP006", "UP007", "B", "D"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "D104"]
"!__init__.py" = ["D100"]
"**/tests.py" = ["D"]


[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"
